Partial change of namespace of the application

--- a/src/app.config
+++ b/src/app.config
@@ -2,14 +2,14 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="KRibbon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="KarveCar.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="KRibbon.Properties.Settings.CadenaConexion" connectionString="Dsn=DBRENT_NET16;uid=cv;pwd=1929"/>
+        <add name="KarveCar.Properties.Settings.CadenaConexion" connectionString="Dsn=DBRENT_NET16;uid=cv;pwd=1929"/>
     </connectionStrings>
     <userSettings>
-        <KRibbon.Properties.Settings>
+        <KarveCar.Properties.Settings>
             <setting name="Language" serializeAs="String">
                 <value>es-ES</value>
             </setting>
@@ -109,6 +109,6 @@
             <setting name="rbtbConfiguracion5" serializeAs="String">
                 <value>rgrKarve</value>
             </setting>
-        </KRibbon.Properties.Settings>
+        </KarveCar.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
