--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -31,18 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Apache.Ibatis.Common">
-      <HintPath>lib\Apache.Ibatis.Common\bin\Debug\Apache.Ibatis.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Apache.Ibatis.DataMapper">
-      <HintPath>lib\Apache.Ibatis.DataMapper\bin\Debug\Apache.Ibatis.DataMapper.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.Core">
-      <HintPath>lib\Apache.Ibatis.DataMapper\bin\Debug\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.DynamicProxy2">
-      <HintPath>lib\Apache.Ibatis.DataMapper\bin\Debug\Castle.DynamicProxy2.dll</HintPath>
-    </Reference>
     <Reference Include="iAnywhere.Data.SQLAnywhere.v4.5, Version=16.0.0.13244, Culture=neutral, PublicKeyToken=f222fc4333e0d400, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\Apache.Ibatis.Common\bin\Debug\iAnywhere.Data.SQLAnywhere.v4.5.dll</HintPath>
@@ -78,6 +66,14 @@
     <ProjectReference Include="..\KarveCommon\KarveCommon.csproj">
       <Project>{49feb437-7f5a-4c7b-870c-a9bb5fc809fd}</Project>
       <Name>KarveCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="lib\Apache.Ibatis.Common\Karve.Ibatis.Common.csproj">
+      <Project>{bbc8da4a-ea88-41d9-8b93-929b8f3adade}</Project>
+      <Name>Karve.Ibatis.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="lib\Apache.Ibatis.DataMapper\Karve.Ibatis.DataMapper.csproj">
+      <Project>{f3e45f39-3224-4ead-b138-eb5cc0e32824}</Project>
+      <Name>Karve.Ibatis.DataMapper</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
