--- a/src/DALModule/SqlMap.config
+++ b/src/DALModule/SqlMap.config
@@ -1,19 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<sqlMapConfig xmlns="http://ibatis.apache.org/dataMapper"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
-  <settings>
-    <setting useStatementNamespaces="false" />
-    <setting cacheModelsEnabled="true" />
-    <setting validateSqlMap="true" />
-  </settings>
-
-  <database>
-    <provider name="sqlServer2.0" />
-    <dataSource name="MtBatisSQL" connectionString="Data Source=JMR276\SQL2008R2;Initial Catalog=MyBatisNet;Integrated Security=True"/>
-  </database>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<sqlMapConfig xmlns="http://ibatis.apache.org/dataMapper" 
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
+	<settings>
+		<setting useStatementNamespaces="true"/>
+		<setting cacheModelsEnabled="false"/>
+		<setting validateSqlMap="false"/>
+		<setting useReflectionOptimizer="false"/>
+		<setting preserveWhitespace="false"/>
+	</settings>	
+	<providers uri="file://providers.config"/>	
+	<database>
+		<provider name="SysBase"/>
+		<dataSource name="ibatisnet.sqlmap" connectionString="DSN=DBRENT_NET16;DataBaseName=DBRENT_NET16;Uid=cv;Pwd=1929;Host=172.26.0.45"/>
+	</database>  
+	<alias>
+		<typeAlias alias="BankDataObject" type="DataAccessLayer.BankDataObject"/>
+	</alias>  
   <sqlMaps>
-    <sqlMap embedded="sqlFile.xml, MyBatisDataMapper" />
+		<sqlMap uri="Banks.xml"/>
   </sqlMaps>
 </sqlMapConfig>
