--- a/src/app.config
+++ b/src/app.config
@@ -10,6 +10,9 @@
     </connectionStrings>
     <userSettings>
         <KarveCar.Properties.Settings>
+            <setting name="Usuario" serializeAs="String">
+                <value>cv</value>
+            </setting>
             <setting name="Language" serializeAs="String">
                 <value>es-ES</value>
             </setting>
@@ -108,6 +111,9 @@
             </setting>
             <setting name="rbtbConfiguracion5" serializeAs="String">
                 <value>rgrKarve</value>
+            </setting>
+            <setting name="Usuario" serializeAs="String">
+                <value>cv</value>
             </setting>
         </KarveCar.Properties.Settings>
     </userSettings>
