--- a/src/KarveCar.csproj
+++ b/src/KarveCar.csproj
@@ -67,25 +67,32 @@
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Windows.Shell, Version=3.5.41019.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Prism, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>packages\Prism.Core.6.3.0\lib\net45\Prism.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Prism.Unity.Wpf, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>packages\Prism.Unity.6.3.0\lib\net45\Prism.Unity.Wpf.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Prism.Wpf, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>packages\Prism.Wpf.6.3.0\lib\net45\Prism.Wpf.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="RibbonControlsLibrary, Version=4.0.0.11019, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -94,6 +101,7 @@
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Prism.Wpf.6.3.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -151,6 +159,47 @@
     <Compile Include="Logic\ToolBar\SiguienteToolBarLogic.cs" />
     <Compile Include="Logic\ToolBar\ToolBarLogic.cs" />
     <Compile Include="Model\Classes\Banco.cs" />
+    <Compile Include="Model\Classes\ActividadVehiculo.cs" />
+    <Compile Include="Model\Classes\CodigoInmovilizacion.cs" />
+    <Compile Include="Model\Classes\Color.cs" />
+    <Compile Include="Model\Classes\FormaTraslado.cs" />
+    <Compile Include="Model\Classes\MotivoRepostaje.cs" />
+    <Compile Include="Model\Classes\TipoVehiculo.cs" />
+    <Compile Include="Model\Classes\AccesorioVehiculo.cs" />
+    <Compile Include="Model\Classes\TipoContactoPotencial.cs" />
+    <Compile Include="Model\Classes\TipoImpresoFactura.cs" />
+    <Compile Include="Model\Classes\ConceptoSalidaCaja.cs" />
+    <Compile Include="Model\Classes\MedioRecepcion.cs" />
+    <Compile Include="Model\Classes\MotivoAnulacionReserva.cs" />
+    <Compile Include="Model\Classes\MotivoNoServicio.cs" />
+    <Compile Include="Model\Classes\ClaveFee.cs" />
+    <Compile Include="Model\Classes\IncidenciaContrato.cs" />
+    <Compile Include="Model\Classes\IncidenciaProveedor.cs" />
+    <Compile Include="Model\Classes\TipoProveedor.cs" />
+    <Compile Include="Model\Classes\Divisa.cs" />
+    <Compile Include="Model\Classes\IncidenciaReserva.cs" />
+    <Compile Include="Model\Classes\IncidenciaCliente.cs" />
+    <Compile Include="Model\Classes\OrigenCliente.cs" />
+    <Compile Include="Model\Classes\TipoImpresoContrato.cs" />
+    <Compile Include="Model\Classes\MotivoImproductivo.cs" />
+    <Compile Include="Model\Classes\MotivoCancelacion.cs" />
+    <Compile Include="Model\Classes\MotivoCambioVehiculo.cs" />
+    <Compile Include="Model\Classes\MotivoAnulacionContrato.cs" />
+    <Compile Include="Model\Classes\UsoAlquiler.cs" />
+    <Compile Include="Model\Classes\TipoVisita.cs" />
+    <Compile Include="Model\Classes\TipoContactoCliente.cs" />
+    <Compile Include="Model\Classes\TipoCliente.cs" />
+    <Compile Include="Model\Classes\TarjetaEmpresa.cs" />
+    <Compile Include="Model\Classes\TarjetaCredito.cs" />
+    <Compile Include="Model\Classes\SectorActividad.cs" />
+    <Compile Include="Model\Classes\Provincia.cs" />
+    <Compile Include="Model\Classes\Poblacion.cs" />
+    <Compile Include="Model\Classes\Negocio.cs" />
+    <Compile Include="Model\Classes\Mercado.cs" />
+    <Compile Include="Model\Classes\ClavePresupuesto.cs" />
+    <Compile Include="Model\Classes\ComunidadAutonoma.cs" />
+    <Compile Include="Model\Classes\ZonaCliente.cs" />
+    <Compile Include="Model\Classes\ZonaOficina.cs" />
     <Compile Include="Model\Classes\CargoPersonal.cs" />
     <Compile Include="Model\Classes\CanalCliente.cs" />
     <Compile Include="Model\Classes\BloqueFacturacion.cs" />
