--- a/src/DALModule/KarveDataAccessLayer.csproj
+++ b/src/DALModule/KarveDataAccessLayer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="DalLocator.cs" />
     <Compile Include="BanksDataAccessLayer.cs" />
+    <Compile Include="IDalLocator.cs" />
     <Compile Include="IDALObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
