--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -64,9 +64,12 @@
     <Compile Include="Generic\GenericObservableCollection.cs" />
     <Compile Include="Generic\GenericPropertyChanged.cs" />
     <Compile Include="Generic\Enum.cs" />
+    <Compile Include="Services\ConfigurationService.cs" />
+    <Compile Include="Services\DataChangeEvent.cs" />
     <Compile Include="Services\ICareKeeperService.cs" />
     <Compile Include="Generic\ManageGenericObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IConfigurationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
