--- a/test/KarveTest/KarveTest/KarveTest.csproj
+++ b/test/KarveTest/KarveTest/KarveTest.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="DAL\BankAccessLayerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TestConfigurationService.cs" />
     <Compile Include="UI\GUITests.cs" />
   </ItemGroup>
   <ItemGroup>
