--- a/src/ToolBarModule/ToolBarModule.csproj
+++ b/src/ToolBarModule/ToolBarModule.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Command\PrintCommand.cs" />
     <Compile Include="Command\SaveCommand.cs" />
     <Compile Include="Command\ToolBarCommand.cs" />
+    <Compile Include="IToolBarView.cs" />
+    <Compile Include="IToolBarViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -107,8 +109,8 @@
     </Compile>
     <Compile Include="ToolBarModule.cs" />
     <Compile Include="ViewModel\KarveToolBarViewModel.cs" />
-    <Compile Include="View\KarveToolBar.xaml.cs">
-      <DependentUpon>KarveToolBar.xaml</DependentUpon>
+    <Compile Include="View\KarveToolBarView.xaml.cs">
+      <DependentUpon>KarveToolBarView.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -134,7 +136,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="View\KarveToolBar.xaml">
+    <Page Include="View\KarveToolBarView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
