--- a/src/KarveCommon/KarveCommon.csproj
+++ b/src/KarveCommon/KarveCommon.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Command\CommandHistory.cs" />
     <Compile Include="Generic\GenericObservableCollection.cs" />
     <Compile Include="Generic\GenericPropertyChanged.cs" />
-    <Compile Include="Generic\Enum.cs" />
+    <Compile Include="Generic\RecopilatorioEnumerations.cs" />
     <Compile Include="Generic\ViewModelBase.cs" />
     <Compile Include="ICareKeeperService.cs" />
     <Compile Include="Generic\ManageGenericObject.cs" />
