--- a/src/DALModule/SqlMap.config
+++ b/src/DALModule/SqlMap.config
@@ -12,11 +12,13 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
 	<database>
 		<provider name="SysBase"/>
 		<dataSource name="ibatisnet.sqlmap" connectionString="DSN=DBRENT_NET16;DataBaseName=DBRENT_NET16;Uid=cv;Pwd=1929;Host=172.26.0.45"/>
-	</database>  
+	</database>
+  <!--
 	<alias>
-		<typeAlias alias="BankDataObject" type="DataAccessLayer.BankDataObject"/>
+		<typeAlias alias="BancoDataObject" type="DataAccessLayer.BancoDataObject"/>
 	</alias>  
   <sqlMaps>
-		<sqlMap uri="Banks.xml"/>
+		<sqlMap uri="Auxiliares.xml"/>
   </sqlMaps>
+  -->
 </sqlMapConfig>
