- Added the beginning of the DataGridModule for extended data grid control. - Added some data mapping. - Minor code fix.

--- a/src/DALModule/lib/Apache.Ibatis.DataMapper.Sysbase.Test/Apache.Ibatis.DataMapper.Sysbase.Test.csproj
+++ b/src/DALModule/lib/Apache.Ibatis.DataMapper.Sysbase.Test/Apache.Ibatis.DataMapper.Sysbase.Test.csproj
@@ -91,7 +91,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Maps\Account.xml" />
+    <Content Include="Fixtures\Maps\Account.xml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="SqlMap.config">
