--- a/src/DALModule/lib/Apache.Ibatis.Common/Apache.Ibatis.Common.csproj
+++ b/src/DALModule/lib/Apache.Ibatis.Common/Apache.Ibatis.Common.csproj
@@ -92,9 +92,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="iAnywhere.Data.SQLAnywhere.v4.5, Version=16.0.0.13244, Culture=neutral, PublicKeyToken=f222fc4333e0d400, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\iAnywhere.Data.SQLAnywhere.v4.5.dll</HintPath>
+    <Reference Include="iAnywhere.Data.SQLAnywhere.v4.5">
+      <HintPath>..\..\..\..\lib\iAnywhere.Data.SQLAnywhere.v4.5.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
