--- a/src/app.config
+++ b/src/app.config
@@ -10,32 +10,29 @@
     </connectionStrings>
     <userSettings>
         <KarveCar.Properties.Settings>
-            <setting name="Usuario" serializeAs="String">
-                <value>cv</value>
-            </setting>
             <setting name="Language" serializeAs="String">
                 <value>es-ES</value>
             </setting>
             <setting name="rbtbMaestros0" serializeAs="String">
-                <value>rgrCentrosAlquiler</value>
+                <value>rgrMaestrosCentrosAlquiler</value>
             </setting>
             <setting name="rbtbMaestros1" serializeAs="String">
-                <value>rgrClientes</value>
+                <value>rgrMaestrosClientes</value>
             </setting>
             <setting name="rbtbMaestros2" serializeAs="String">
-                <value>rgrComisionistas</value>
+                <value>rgrMaestrosComisionistas</value>
             </setting>
             <setting name="rbtbMaestros3" serializeAs="String">
-                <value>rgrProveedores</value>
+                <value>rgrMaestrosContratos</value>
             </setting>
             <setting name="rbtbMaestros4" serializeAs="String">
-                <value>rgrTarifas</value>
+                <value>rgrMaestrosIncidencias</value>
             </setting>
             <setting name="rbtbMaestros5" serializeAs="String">
-                <value>rgrVehiculos</value>
+                <value>rgrMaestrosProveedores</value>
             </setting>
             <setting name="rbtbMaestros6" serializeAs="String">
-                <value>rgrAuxiliares</value>
+                <value>rgrMaestrosReservas</value>
             </setting>
             <setting name="rbtbContratos0" serializeAs="String">
                 <value>rgrContratos</value>
@@ -114,6 +111,18 @@
             </setting>
             <setting name="Usuario" serializeAs="String">
                 <value>cv</value>
+            </setting>
+            <setting name="rbtbMaestros7" serializeAs="String">
+                <value>rgrMaestrosTarifas</value>
+            </setting>
+            <setting name="rbtbMaestros8" serializeAs="String">
+                <value>rgrMaestrosVehiculos</value>
+            </setting>
+            <setting name="rbtbMaestros9" serializeAs="String">
+                <value>rgrMaestrosVarios</value>
+            </setting>
+            <setting name="rbtbServicios0" serializeAs="String">
+                <value>rgrServicios</value>
             </setting>
         </KarveCar.Properties.Settings>
     </userSettings>
