--- a/src/DALModule/lib/Apache.Ibatis.DataMapper/Apache.Ibatis.DataMapper.csproj
+++ b/src/DALModule/lib/Apache.Ibatis.DataMapper/Apache.Ibatis.DataMapper.csproj
@@ -1,4 +1,5 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="15.0">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="15.0">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>9.0.30729</ProductVersion>
@@ -123,12 +124,12 @@
     </Compile>
     <Compile Include="Configuration\ConfigurationSetting.cs" />
     <Compile Include="Configuration\DefaultConfigurationEngine.cs" />
-    <Compile Include="Configuration\Interpreters\DefaultConfigurationStore.cs" />
+    <Compile Include="Configuration\DefaultConfigurationStore.cs" />
     <Compile Include="Configuration\DefaultModelBuilder.cs" />
+    <Compile Include="Configuration\IConfigurationEngine.cs" />
     <Compile Include="Configuration\Interpreters\Config\Xml\CodeConfigurationInterpreter.cs" />
     <Compile Include="Configuration\Interpreters\Config\Xml\Processor\Handlers\ProcessDefaultElement.cs" />
     <Compile Include="Configuration\Interpreters\Config\Xml\Processor\Handlers\ProcessIncludeElement.cs" />
-    <Compile Include="Data\IConfigurationEngine.cs" />
     <Compile Include="Configuration\IConfigurationStore.cs" />
     <Compile Include="Configuration\Interpreters\Config\Xml\SchemaValidator.cs" />
     <Compile Include="Configuration\Module\ArgumentExpression.cs" />
