--- a/src/DALModule/lib/Apache.Ibatis.DataMapper.Sysbase.Test/Apache.Ibatis.DataMapper.Sysbase.Test.csproj
+++ b/src/DALModule/lib/Apache.Ibatis.DataMapper.Sysbase.Test/Apache.Ibatis.DataMapper.Sysbase.Test.csproj
@@ -91,9 +91,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Fixtures\Maps\Account.xml" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="SqlMap.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -122,6 +119,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Fixtures\Maps\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
